// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Primary renders correctly 1`] = `
<button
  class="bg-pink-1000 hover:bg-pink-500 text-white px-4 py-2"
>
  Primary Button
</button>
`;

exports[`Button Primary renders correctly with icon 1`] = `
<button
  class="bg-pink-1000 hover:bg-pink-500 text-white px-4 py-2"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
    />
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
    />
  </svg>
  Primary Button
</button>
`;

exports[`Button Primary renders correctly with size large 1`] = `
<button
  class="bg-pink-1000 hover:bg-pink-500 text-white px-8 py-2"
>
  Primary Button
</button>
`;

exports[`Button Secondary renders correctly 1`] = `
<button
  class="border border-pink-1000 hover:border-pink-400 hover:text-pink-400 text-pink-1000 px-4 py-2"
>
  Secondary Button
</button>
`;

exports[`Button Secondary renders correctly with icon 1`] = `
<button
  class="border border-pink-1000 hover:border-pink-400 hover:text-pink-400 text-pink-1000 px-4 py-2"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
    />
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
    />
  </svg>
  Secondary Button
</button>
`;

exports[`Button Secondary renders correctly with size large 1`] = `
<button
  class="border border-pink-1000 hover:border-pink-400 hover:text-pink-400 text-pink-1000 px-8 py-2"
>
  Secondary Button
</button>
`;

exports[`Button Tertiary renders correctly 1`] = `
<button
  class="text-white px-4 py-2"
>
  Tertiary Button
</button>
`;

exports[`Button Tertiary renders correctly with icon 1`] = `
<button
  class="text-white px-4 py-2"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
    />
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
    />
  </svg>
  Tertiary Button
</button>
`;

exports[`Button Tertiary renders correctly with size large 1`] = `
<button
  class="text-white px-8 py-2"
>
  Tertiary Button
</button>
`;
